# sagan-studio

./: .gitattributes  .gitignore  Benchmark_Performance_Report.md  CHANGELOG.md  Full_Variants_Research_Report.md  LICENSE  MANIFEST.in  README.md  Research_Training_Analysis.md  Sagan_Research_Report.md  mkdocs.yml  pyproject.toml  requirements-demo.txt  requirements.txt  setup.py  tech_sim_results.json  vercel.json  verify_demo.py  verify_portfolio.py  verify_train.py
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: Detailed_Research_Report.md  Sagan_Model_Whitepaper.md  architecture.md  changelog.md  contributing.md  getting-started.md  index.md  requirements.txt  tech_case_study.md  whitepaper.md
docs/api/: cli.md  config.md  data.md  ensemble.md  exceptions.md  index.md  logging.md  predict.md  registry.md  utils.md
docs/tutorials/: custom_config.md  parallel_training.md  single_stock.md
sagan/: __init__.py  __main__.py  app.py  autonomous.py  config.py  data.py  database.py  desk.py  ensemble.py  exceptions.py  indicators.py  logging_config.py  metrics.py  nlp.py  parallel.py  predict.py  py.typed  registry.py  research.py  signals.py  utils.py
sagan/cli/: auth.py  commands.py
sagan/compliance/: report.py
sagan/explain/: formatter.py  gemma.py
sagan/models/: __init__.py  allocator.py  game_engine.py  llm_bridge.py  manager.py  math_engine.py  pinn_loss.py  tft.py  xai_layer.py
sagan/portfolio/: __init__.py  csv_import.py  rebalancer.py  snaptrade.py
sagan/symbolic_lib/: __init__.py  download_models.py
sagan/symbolic_lib/models/: .gitkeep  centered_model.pkl
scratch/: tech_portfolio_sim.py
scripts/: benchmark_initial.py  build_release.py  full_system_check.py  full_variants_research.py  push_github.py  research_pipeline.py  reverify_novelty.py  run_backtest.py  run_desk_sample.py
tests/: test_data.py  test_ensemble.py  test_research.py  test_utils.py
